--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <!-- Add your site or application content here -->
   <p class="header">Playlist</p>
+
+  <nav id="filters" class="hidden">
+<!--     sort by name, length, or year. -->
+    <p>Sort By:</p>
+    <button id="sort_by_name" class="">Name</button>
+    <button id="sort_by_length" class="">Length</button>
+    <button id="sort_by_year" class="">Year</button>
+  </nav>
 
   <div id="songs">
     <p>No songs to show.</p>
@@ -28,9 +35,9 @@
 
   <div id="error" class="hidden"><p></p></div>
 
-  <script src="js/vendor/modernizr-3.7.1.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+<!--  <script src="js/vendor/modernizr-3.7.1.min.js"></script>-->
+<!--  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>-->
+<!--  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>-->
   <script src="js/main.js"></script>
 </body>
 
