filters are functioning now

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <nav id="filters" class="hidden">
 <!--     sort by name, length, or year. -->
     <p>Sort By:</p>
-    <button id="sort_by_name" class="">Name</button>
-    <button id="sort_by_length" class="">Length</button>
-    <button id="sort_by_year" class="">Year</button>
+<!--    <button id="sort_by_name" class="">Name</button>-->
+<!--    <button id="sort_by_length" class="">Length</button>-->
+<!--    <button id="sort_by_year" class="">Year</button>-->
   </nav>
 
   <div id="songs">
