--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!--    <button id="sort_by_year" class="">Year</button>-->
   </nav>
 
-  <div id="songs">
+  <div id="songs" style="width: 100%">
     <p>No songs to show.</p>
   </div>
 
